Updated links and added to heroku

--- a/index.html
+++ b/index.html
@@ -285,9 +285,8 @@
         <div class="row">
             <div class="twelve columns">
                 <ul class="social-links">
-                    <li><a href="https://www.linkedin.com/in/tanmaybagaria/"><i class="fa fa-linkedin"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/chokkarapu/"><i class="fa fa-linkedin"></i></a></li>
                     <li><a href="https://github.com/withteja><i class="fa fa-github"></i></a></li>
-                   
                 </ul>              
             </div>
             <div id="go-top"><a class="smoothscroll" title="Back to Top" href="#home"><i class="icon-up-open"></i></a></div>
@@ -304,7 +303,7 @@
     <script src="js/jquery.fittext.js"></script>
     <script src="js/magnific-popup.js"></script>
     <script src="js/init.js"></script>
-    https://codepen.io/jasperlachance/pen/QNMwBg
+    <!-- https://codepen.io/jasperlachance/pen/QNMwBg -->
     <script src="js/TweenLite.min.js"></script>
     <script src="js/EasePack.min.js"></script>
     <script src="js/demo.js"></script>
