Updates the classes and added hyperlinks

--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
                     <li class="current"><a class="smoothscroll" href="#home">Home</a></li>
                     <li><a class="smoothscroll" href="#about">About</a></li>
                     <li><a class="smoothscroll" href="#resume">Resume</a></li>
-                    <li><a class="smoothscroll" href="#portfolio">Projects</a></li>
+                    <li><a href="https://github.com/withteja" target="_blank">Projects</a></li>
+                   
                 </ul>
                 <!-- end #nav -->
             </nav>
@@ -64,11 +65,11 @@
                         Senior at University of Wisconsin-Madison majoring computer science.
                         <h3/>
                         <h3>
-                        Actively looking for full-time Software Development positions starting May 2021.
+                        Actively looking for full-time Software Development positions starting May '21.
                          <h3/>
                         <ul class="social">
                             <li><a href="https://www.linkedin.com/in/chokkarapu/"><i class="fa fa-linkedin"></i></a></li>
-                            <li><a href="https://github.com/w"><i class="fa fa-github"></i></a></li>
+                            <li><a href="https://github.com/withteja"><i class="fa fa-github"></i></a></li>
                             </ul>
                     </div>
                 </div>
@@ -91,7 +92,7 @@
             </div>
             <div class="nine columns main-col">
                 <h2>About Me</h2>
-                <p>I am a highly motivated individual with my interests lying in <b>Software Development</b> and <b>Data Science</b>. I have taken a variety of courses and like to collaborate with other people on cool projects. During my spare time, I like to watch online videos of  softwares and gadgets and try to implement them. I am seeking opportunities for positions relating to Software Development.
+                <p>I consider myself as someone who is highly focused and attentive to detail, with my interests lying in <b>Software Development</b>. I have taken a variety of courses and like to collaborate with other people on cool projects. During my spare time, I like to watch online videos of  softwares and gadgets and try to implement them. I am seeking opportunities for positions relating to Software Development.
                 </p>
                 <div class="row">
                     <div class="columns contact-details">
@@ -131,7 +132,7 @@
                         <h3>University of Wisconsin-Madison</h3>
                         <p class="info">B.S. in Computer Science<span>&bull;</span> <em class="date">May '21</em></p>
                         <p>
-                            <b style="font-size:18px">Major GPA: 3.5/4.0 </b></br>
+                            <b style="font-size:18px">Major GPA: 3.52 / 4.00 </b></br>
                             <b style="font-size:18px">Relevant Coursework</b></br>
                             CS 240: Discrete Mathematics </br>  
                             CS 252: Introduction to Computer Engineering</br>
