--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                         <h3>Undergraduate Peer Mentor | Madison, WI</h3>
                         <p class="info">CS 354: Systems Programming <span>&bull;</span> <em class="date">Aug '20 - Present</em></p>
                         <ul style="list-style-type:circle;">
-                             <li>Selected based on proficiency in the course and its concepts</li>
+                             <li>Selected based on proficiency in the course and its concepts.</li>
                             <li>Holding office hours, review sessions and small group discussions to assist students with concepts of heap, stack, cache and assembly code</li>
                             <li>Coordinating with the professor to enhance the skill level of students in this subject</li>
                         </ul>
