--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             </div>
             <div class="nine columns main-col">
                 <h2>About Me</h2>
-                <p>I am highly focused and attentive to detail, with my interests lying in <b>Software Development</b>. I have taken a variety of courses and like to collaborate with other people on cool projects. During my spare time, I like to watch online videos of  softwares and gadgets and try to implement them. I am seeking opportunities for positions relating to Software Development.
+                <p>I am very passionate about coding, I have been coding since 7th grade. My interests lying in <b>Software Development</b>. I have taken a variety of courses and like to collaborate with other people on cool projects. During my spare time, I like to watch online videos of softwares and gadgets and try to implement them. I am seeking opportunities for positions relating to Software Development.
                 </p>
                 <div class="row">
                     <div class="columns contact-details">
