--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
                 <div class="row item">
                     <div class="twelve columns">
-                        <h3>Undergraduate Peer Mentor | Madison, WI</h3>
+                        <h3>Undergraduate Teaching Assistant Mentor | Madison, WI</h3>
                         <p class="info">CS 540: Artificial Intelligence <span>&bull;</span> <em class="date">Dec '20 - Present</em></p>
                         <ul style="list-style-type:circle;">
                              <li>Selected based on proficiency in the course and its concepts.</li>
@@ -198,7 +198,7 @@
                 
                 <div class="row item">
                     <div class="twelve columns">
-                        <h3>Undergraduate Peer Mentor | Madison, WI</h3>
+                        <h3>Undergraduate Teaching Assistant | Madison, WI</h3>
                         <p class="info">CS 354: Systems Programming <span>&bull;</span> <em class="date">Aug '20 - Present</em></p>
                         <ul style="list-style-type:circle;">
                              <li>Selected based on proficiency in the course and its concepts.</li>
