--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
                 <div class="row banner">
                     <div class="banner-text">
                         <h1 class="responsive-headline">I'm Sai Teja Chokkarapu.</h1>
-                        <h3>
+                        <h3 id = "sum1">
                         Senior at University of Wisconsin-Madison majoring computer science.
                         <h3/>
-                        <h3>
+                        <h3 id = "sum2">
                         Actively looking for full-time Software Development positions starting May '21.
                          <h3/>
                         <ul class="social">
