--- a/index 2.html
+++ b/index 2.html
@@ -60,8 +60,13 @@
             <div class="main-title">
                 <div class="row banner">
                     <div class="banner-text">
-                        <h1 class="responsive-headline">Hi, I'm Sai Teja.</h1>
-                        
+                        <h1 class="responsive-headline">I'm Sai Teja Chokkarapu.</h1>
+                        <h3 id = "sum1">
+                        Senior at University of Wisconsin-Madison majoring computer science.
+                        <h3/>
+                        <h3 id = "sum2">
+                        Actively looking for full-time Software Development positions starting May '21.
+                         <h3/>
                         <ul class="social">
                             <li><a href="https://www.linkedin.com/in/chokkarapu/"><i class="fa fa-linkedin"></i></a></li>
                             <li><a href="https://github.com/withteja"><i class="fa fa-github"></i></a></li>
@@ -88,7 +93,7 @@
             <div class="nine columns main-col">
                 <h2>About Me</h2>
                 <p>
-                    I always strive to challenge myself to solve complex problems and try to push myself everyday to be better than yesterday. I am very intereted in Web Development, Computer Systems, Low-level system design, Data structures and Algorithms.
+                    I am self motivated individual, interests in Computer Systems, Low-level design, Data structures and Algorithms. I also do a lot of competitive programming.
                     I watch a lot of developer talks about new technologies and frameworks, later collaborate with other people on building amazing projects.
                 </p>
                 <div class="row">
